--- a/css/style.css
+++ b/css/style.css
@@ -1,74 +1,82 @@
-body{
-    background: -webkit-radial-gradient(circle,rgb(187, 254, 216),rgb(167, 223, 252));
+/* Index */
+*{
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.contenedor {
-    width: 1280px;
-    margin: 20px auto;
+body{
+    background-image: url("/img/Fondo.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    margin: 0;
 }
 
 header {
-    background-image:  url("/img/Fondo.jpg");
-    height: 150px;
+    background-color: rgb(254, 210, 210);
+    height: 160px;
 }
 
-.logo {
-    float: left;
-    width: 300px;
-    padding-right: 1em;
+.contenedor {
+    height: 120px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center; 
 }
 
 .logo-style {
-    width: 300px;
-    height: 150px;
-}
-
-.menu-gral{
-    width:  830px;
-    float:left;
+    height: 90px;
 }
 
 h1 {
     text-align: center;
-    color: rgb(94, 13, 6);
+    color: #000;
 }
 
-.menu ul {
+#inicio {
+    height: 30px;
+    float: right;
+    margin-top: 20px;
+    padding: 10px;
+}
+
+#inicio:hover{
+    background-color: rgb(254, 176, 176);
+    border-radius: 20px;
+}
+
+nav ul {
     margin: 0;
     padding: 0;
     list-style-type: none;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    background-color: rgb(254, 176, 176);
+    color: #000;
 }
 
-.menu li {
+nav li {
     flex: 1 0 auto;
     text-align: center;
 }
 
-.menu li a {
+nav li a {
     font-size: 20px;
 }
 
-.menu ul a {
+nav ul a {
     display: block;
     text-decoration: none;
-    background-color: rgb(94, 13, 6);
-    color: rgb(127, 255, 212);
+    color:#000;
+    margin-left: 110px;
+    margin-right: 110px;
     padding: 0.6em 1em;
 }
 
-.menu ul a:hover {
-    background-color:#64f8bd ;
+nav ul a:hover {
+    background-color:rgb(255, 156, 156) ;
     color: #000;
     padding: 0.6em 1em;
-}
-
-#inicio {
-    width: 70px;
-    margin-top: 50px;
-    float: right;
 }
 
 main { 
@@ -76,18 +84,22 @@ main {
     margin: 20px auto;
 }
 
+h2 {
+    text-align: center;
+}
+
 footer {
-    width: 1280px;
-    margin: 20px auto;
-    background-color: rgb(94, 13, 6);
-    color: rgb(127, 255, 212);
+    margin: 0px;
+    background-color: rgb(254, 210, 210);
+    color: #000;
     display: flex;
     justify-content: space-between;
 }
 
 .datos {
-    margin-left: 20px;
+    margin-left: 110px;
 }
+
 .links {
     display: flex;
     flex-direction: column;
@@ -97,20 +109,28 @@ footer {
 
 .links a {
     text-decoration: none;
-    color:rgb(127, 255, 212);
+    color: #000;
 }
 
 .links a:hover {
-    background-color:#64f8bd ;
+    background-color:rgb(254, 176, 176);
     color: #000;
-    padding: 0.6em 1em;
+    padding: 4px;
+}
+
+.redes {
+    width: 200px;
+    margin-right: 110px;
 }
 
 .redes img {
-    width: 40px;
-    margin-top: 40px;
-    margin-right: 30px;
+    width: 25px;
+    margin-top: 20px;
+    margin-right: 20px;
+    float: right;
 }
+
+/* Inscribite */
 
 .video {
     display: flex;
@@ -120,8 +140,53 @@ footer {
 
 .texto {
     text-align: justify;
-    margin-left: 80px;
-    margin-right: 80px;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.box {
+    width: 1100px;
+    margin: 50px auto;
+    display:flex;
+    flex-flow: wrap;
+    justify-content: center;
+}
+
+.card_box {
+    margin: 10px;
+    perspective: 700;
+    -webkit-perspective: 700;
+}
+
+.card {
+    width: 300px;
+    height: 350px;
+    position: relative;
+    background-color: rgb(254, 176, 176);
+    transform-style: preserve-3d;
+    transition: 0.7s ease;
+}
+
+.frente, .dorso {
+    width: 90%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+}
+
+.dorso {
+    transform: rotateY(180deg);
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: justify;
+}
+
+.card_box:hover .card{
+    transform: rotateY(180deg);
 }
 
 .boton {
@@ -132,7 +197,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(188, 228, 119);
+    background-color: rgb(254, 176, 176);
     border-radius: 10px;
     transition: 0.5s;
     cursor: pointer;
@@ -141,16 +206,19 @@ footer {
 
 .boton:hover {
     transition: 0.5s;
-    background-color: rgb(94, 13, 6);
+    background-color: rgb(254, 210, 210);
+    border: 3px solid;
+    border-color: rgb(94, 13, 6);
 }
 
 .boton a{
     text-decoration: none;
+    color:#000;
     font-weight: bold;
 }
 
 .boton a:hover{
-    color:rgb(173, 255, 252);
+    color:#000;
 }
 
 .grupo {
@@ -159,6 +227,7 @@ footer {
 }
 
 /*Contacto*/
+
 form{
     display: flex;
     flex-direction: column;
