--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,6 @@ h1 {
     height: 30px;
     float: right;
     margin-top: 20px;
-    padding: 10px;
 }
 
 #inicio:hover{
@@ -74,7 +73,7 @@ nav ul a {
 }
 
 nav ul a:hover {
-    background-color:rgb(255, 156, 156) ;
+    background-color:rgb(215, 189, 226) ;
     color: #000;
     padding: 5px;
 }
@@ -108,17 +107,20 @@ h2 {
 .aside{
     width: 430px;
     float: right;
-    background-color: rgb(254, 210, 210);
+    margin-top: 20px;
 }
 
-h4 {
+.aside h4 {
     text-align: center;
-    padding: 10px;
+}
+
+.calendario {
+    background-color: rgb(235, 222, 240);
+    padding-bottom: 10px;
 }
 
 iframe {
-    margin: 10px auto;
-
+    margin: 0;
 }
 
 .eventos {
@@ -128,65 +130,44 @@ iframe {
     margin-top: 20px;
 }
 
-.container {
-    margin:auto;
-    background-color: rgb(254, 176, 176);
-    width: 1100px;
-    padding: 30px;
+h3 {
+    text-align: center;
+}
+.swiper {
+    width: 100%;
+    height: 100%;
 }
 
-.container ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+.swiper-slide {
+    text-align: center;
+    font-size: 16px;
+    border: 2px solid rgb(254, 176, 176);
+	background: rgb(254, 210, 210);
+	border-radius: 6px;  
+	box-shadow: inset 5px 5px 5px rgb(254, 210, 210), inset -2px -2px 3px rgba(0,0,0,.1), 2px 2px 10px rgba(0,0,0,.1);
+	text-shadow: 1px 1px 1px rgba(255,255,255,.9);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+    padding: 10px;
 }
 
-.container ul.slider {
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.swiper-pagination {
     position: relative;
-    width: 33.3%;
-    height: 200px;
+    top: 5px;
 }
 
-.container li {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-ul.slider li{
-    position: absolute;
-    opacity: 0;
-    transition: opacity 0.5s;
-    background-color: rgb(254, 176, 176);
-}
-
-ul.slider li:first-child {
-    opacity: 1;
-}
-
-ul.slider li:target {
-    opacity: 1;
-}
-
-.menu {
+.mapa {
     text-align: center;
-    margin: 20px;
-}
-
-.menu li {
-    display: inline-block;
-    text-align: center;
-}
-
-.menu li a {
-    display: inline-block;
-    color: white;
-    text-decoration: none;
-    background-color: rgb(255, 156, 156);
-    width: 30px;
-    height: 30px;
-    font-size: 20px;
-    border-radius: 100%;
 }
 
 footer {
@@ -198,37 +179,53 @@ footer {
 }
 
 .datos {
+    margin-top: 10px;
     margin-left: 110px;
+}
+
+.datos p{
+    margin: 1px;
+}
+
+.datos h3{
+    margin-top: 10px;
+    text-align: left;
 }
 
 .links {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 1em;
+        flex-direction: column;
+        justify-content: center;
 }
 
 .links a {
     text-decoration: none;
     color: #000;
+    padding: 6px;
 }
 
 .links a:hover {
-    background-color:rgb(254, 176, 176);
+    background-color:rgb(215, 189, 226);
     color: #000;
-    padding: 4px;
+    padding: 6px;
 }
 
-.redes {
+.red {
     width: 300px;
     margin-right: 110px;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-.redes img {
+.red h4 {
+    font-weight: bold;
+}
+
+.red img {
     width: 25px;
-    margin-bottom: 20px;
-    margin-left: 25px;
+    margin: 10px;
 }
 
 /* Inscribite */
@@ -247,10 +244,11 @@ footer {
 
 .box {
     width: 1100px;
-    margin: 50px auto;
+    margin: auto;
     display:flex;
     flex-flow: wrap;
     justify-content: center;
+    align-items: center;
 }
 
 .card_box {
@@ -260,8 +258,9 @@ footer {
 }
 
 .card {
+    margin: 20px;
     width: 300px;
-    height: 350px;
+    height: 320px;
     position: relative;
     background-color: rgb(254, 176, 176);
     transform-style: preserve-3d;
@@ -277,6 +276,7 @@ footer {
 }
 
 .dorso {
+    background-color: rgb(254, 176, 176);
     transform: rotateY(180deg);
     padding: 15px;
     display: flex;
@@ -298,7 +298,9 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(254, 176, 176);
+    background-color: rgb(215, 189, 226);
+    border: 3px solid;
+    border-color: rgb(125, 60, 152);
     border-radius: 10px;
     transition: 0.5s;
     cursor: pointer;
@@ -327,6 +329,76 @@ footer {
     justify-content: center;
 }
 
+/*Adiestradores*/
+
+#adiestradores {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 620px 620px;
+    justify-content: space-between;
+}
+
+.biselado {
+	border: 2px solid rgb(254, 176, 176);
+	background: rgb(254, 210, 210);
+	border-radius: 6px;  
+	box-shadow: inset 5px 5px 5px rgb(254, 210, 210), inset -2px -2px 3px rgba(0,0,0,.1), 2px 2px 10px rgba(0,0,0,.1);
+	text-shadow: 1px 1px 1px rgba(255,255,255,.9);
+}
+
+.biselado h3, .lista {
+    margin-left: 20px;
+    text-align: left;
+}
+
+.orden {
+    display: grid;
+    grid-template-columns: 280px 280px;
+    grid-template-rows: 50px 50px;    
+}
+
+.barrios {
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
+.registro {
+    color: black;
+    font-size: 25px;
+    width: 280px;
+    height: 150px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(215, 189, 226);
+    border: 3px solid;
+    border-color: rgb(125, 60, 152);
+    border-radius: 10px;
+    transition: 0.5s;
+    cursor: pointer;
+    margin: 20px auto;
+}
+
+.registro:hover {
+    transition: 0.5s;
+    background-color: rgb(254, 210, 210);
+    border: 3px solid;
+    border-color: rgb(94, 13, 6);
+}
+
+.registro a{
+    text-decoration: none;
+    color:#000;
+    font-weight: bold;
+}
+
+.registro a:hover{
+    color:#000;
+}
+
 /*Contacto*/
 
 form{
@@ -343,23 +415,23 @@ form{
     display: flex;
 }
 
-label{
+label {
     width: 200px;
     font-weight: bold;
     font-size: 18px;
     text-align: left;
 }
 
-input{
+input {
     width: 300px;
     border-radius: 5px;
 }
 
-textarea{
+textarea {
     background-color: #FEF9E7;
 }
 
-.button{
+.button {
     width: 100px;
     height: 50px;
     background-color: rgb(2, 50, 96);
@@ -369,7 +441,61 @@ textarea{
     border-radius: 5px;
 }
 
-.button:hover{
+.button:hover {
     background-color: rgb(251, 74, 227);
     color: rgb(0, 0, 0);
+}
+
+/*Formulario de alumnos*/
+
+.recuadro{
+   border-style: solid;
+   border-width: medium;
+   border-color:  rgb(251, 74, 227);
+}
+legend {
+    border-color: blue;
+    font-size: xx-large;
+    color: darkgreen;
+    text-align: center;
+    font-weight: bold;
+}
+.dato_u,.dato2{
+    text-align: center;
+    color:black;
+    font-weight: bold;
+ }
+
+.alumnos_adiest{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    width: 700px;
+    margin: 0 auto;
+    padding: 15px;
+    text-align: center;
+} 
+
+input#genero_u {
+    width: 10px;
+}
+
+input#genero_a {
+    width: 10px;
+}
+
+input#ciudad_a {
+    width: 10px;
+    
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding: 40px;
+    gap: 10px;
+
+  }
+.grid-item {
+    color: rgb(38, 0, 255);
+    font-weight: bold;
 }
