--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
 body{
     background-image: url("/img/Fondo.jpg");
     background-position: center center;
@@ -10,6 +11,7 @@ body{
     background-size: cover;
     background-attachment: fixed;
     margin: 0;
+    padding: 0;
 }
 
 header {
@@ -89,6 +91,42 @@ h2 {
     text-align: center;
 }
 
+.slider2 {
+	width: 100%;
+	margin: auto;
+	overflow: hidden;
+}
+
+.slider2 ul {
+	display: flex;
+	padding: 0;
+	width: 800%;
+	animation: cambio 20s infinite alternate linear;
+}
+
+.slider2 li {
+	width: 100%;
+	list-style: none;
+}
+
+.slider2 img {
+	width: 100%;
+}
+
+@keyframes cambio {
+	0% {margin-left: 0;}
+	20% {margin-left: 0;}
+	
+	25% {margin-left: -100%;}
+	45% {margin-left: -100%;}
+	
+	50% {margin-left: -200%;}
+	70% {margin-left: -200%;}
+	
+	75% {margin-left: -300%;}
+	100% {margin-left: -300%;}
+}
+
 .centro {
     display: flex;
     justify-content: center;
@@ -130,42 +168,6 @@ iframe {
     font-size: 14px;
     margin-right: 20px;
     margin-top: 20px;
-}
-
-h3 {
-    text-align: center;
-}
-.swiper {
-    width: 100%;
-    height: 100%;
-}
-
-.swiper-slide {
-    text-align: center;
-    font-size: 16px;
-    border: 2px solid rgb(254, 176, 176);
-	background: rgb(254, 210, 210);
-	border-radius: 6px;  
-	box-shadow: inset 5px 5px 5px rgb(254, 210, 210), inset -2px -2px 3px rgba(0,0,0,.1), 2px 2px 10px rgba(0,0,0,.1);
-	text-shadow: 1px 1px 1px rgba(255,255,255,.9);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 300px;
-    padding: 10px;
-}
-
-.swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.swiper-pagination {
-    position: relative;
-    top: 5px;
 }
 
 .mapa {
@@ -330,6 +332,12 @@ footer {
     display: flex;
     justify-content: center;
 }
+
+h2 {
+    text-align: center;
+}
+
+
 
 /*Adiestradores*/
 
