--- a/css/style.css
+++ b/css/style.css
@@ -144,10 +144,16 @@ h2 {
     text-align: center;
 }
 
+
+.mapa {
+    text-align: center;
+}
+
 .aside{
     width: 430px;
     float: right;
     margin-top: 20px;
+    background-color: rgb(235, 222, 240);
 }
 
 .aside h4 {
@@ -155,7 +161,7 @@ h2 {
 }
 
 .calendario {
-    background-color: rgb(235, 222, 240);
+    
     padding-bottom: 10px;
 }
 
@@ -170,8 +176,31 @@ iframe {
     margin-top: 20px;
 }
 
-.mapa {
-    text-align: center;
+.aside .clima {
+    background-color: rgb(255, 236, 236);
+    border-radius: 6px;  
+	box-shadow: inset 5px 5px 5px rgb(255, 225, 225), inset -2px -2px 3px rgba(0,0,0,.1), 2px 2px 10px rgba(0,0,0,.1);
+	text-shadow: 1px 1px 1px rgba(255,255,255,.9);
+    width: 280px;
+    height: 300px;
+    margin: 60px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.icon {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+}
+
+.icon img {
+    margin-right: 20px;
+}
+
+.text, .temp, .summary, .location {
+    margin: 10px auto;
 }
 
 footer {
@@ -341,6 +370,7 @@ h2 {
     width: 100%;
     height: 100%;
     margin: auto;
+    box-sizing: border-box;
 }
 
 .swiper-slide {
@@ -349,6 +379,9 @@ h2 {
     width: 250px;
     height: 250px;
 	background: rgb(254, 210, 210);
+	border-radius: 6px;  
+	box-shadow: inset 5px 5px 5px rgb(254, 210, 210), inset -2px -2px 3px rgba(0,0,0,.1), 2px 2px 10px rgba(0,0,0,.1);
+	text-shadow: 1px 1px 1px rgba(255,255,255,.9);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -585,7 +618,7 @@ input#ciudad_a {
   }
 .grid-item {
     color: rgb(38, 0, 255);
-    font-weight: bold;
+    font-weight: bold;
 }
 
 /*Log - In*/
@@ -601,13 +634,15 @@ input#ciudad_a {
     border-radius:10px;
     cursor: pointer;
     font-size: large;
-    }
+}
+
 .ingresar2:hover {
     transition: 0.5s;
     background-color: rgb(254, 210, 210);
     border: 3px solid;
     border-color: rgb(94, 13, 6);
-    }
+}
+
 .grid-container2 {
     display:grid;
     grid-template-columns: 400px 400px ;
@@ -615,29 +650,36 @@ input#ciudad_a {
     width: 1280px;
     margin-bottom: 150px;
     height: 341px;
-    }
+}
+
 .grid-item2 .biselado{
     height: 300px;
     width: 400px;
     margin-left: 30%;
     margin-top: 10%;
-    }
-.cuadricula{
+}
+
+.cuadricula {
     height: 300px;
-    }
-input#usuario_login, input#contraseña_login{
+}
+
+input#usuario_login, input#contraseña_login {
     width: 200px;
-    }
-.registro_alumno , .registro_adiestrador{
+}
+
+.registro_alumno, .registro_adiestrador {
     text-align: center;
     margin-top: 15px;
-    }
-.dato_login{
+}
+
+.dato_login {
     text-align: center;
     margin-top: 20px;
     height: 30px;
-    }
-.boton_ingreso{
+}
+
+.boton_ingreso {
     text-align: center;
     margin-top: 25px;
-    }
+}
+
