--- a/css/style.css
+++ b/css/style.css
@@ -543,9 +543,11 @@ h2 {
 }
 
 .linea {
-    display: flex;
+   display: flex;
     padding: 10px;
 }
+
+
 
 label {
     width: 200px;
@@ -594,13 +596,12 @@ legend {
     font-weight: bold;
 }
 .dato_u,.dato2{
-    text-align: center;
+    text-align: left;
     color:#000;
     font-weight: bold;
  }
 
 .alumnos_adiest{
-    display: flex;
     flex-direction: column;
     gap: 12px;
     width: 600px;
@@ -967,5 +968,18 @@ input#usuario_login, input#contraseña_login {
     grid-template-columns: auto auto;
     padding: 40px;
     gap: 10px;
+}
+/*Contacto*/
+#contact{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    width: auto;
+    margin: auto;
+    padding: 15px;
+    text-align: center;
+        }
+.linea,.dato_u,.dato2{{
+    flex-direction: column;
 }
 }
