--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-
 body{
     background-image: url("/img/Fondo.jpg");
     background-position: center center;
@@ -51,10 +50,17 @@ h1 {
 #inicio:hover{
     background-color: rgb(254, 176, 176);
     border-radius: 15px;
-   
 }
 
-nav ul {
+.abrir-menu, .cerrar-menu {
+    display: none;
+}
+
+.nav {
+    display: block;
+}
+
+.nav ul {
     margin: 0;
     padding: 0;
     list-style-type: none;
@@ -66,16 +72,16 @@ nav ul {
     color: #000;
 }
 
-nav li {
+.nav li {
     flex: 1 0 auto;
     text-align: center;
 }
 
-nav li a {
+.nav li a {
     font-size: 18px;
 }
 
-nav ul a {
+.nav ul a {
     display: block;
     text-decoration: none;
     color:#000;
@@ -84,7 +90,7 @@ nav ul a {
     padding: 5px;
 }
 
-nav ul a:hover {
+.nav ul a:hover {
     background-color:rgb(215, 189, 226) ;
     color: #000;
     padding: 5px;
@@ -152,7 +158,6 @@ h2 {
     text-align: center;
 }
 
-
 .mapa {
     text-align: center;
 }
@@ -169,7 +174,6 @@ h2 {
 }
 
 .calendario {
-    
     padding-bottom: 10px;
 }
 
@@ -271,6 +275,10 @@ footer {
     width: 25px;
     margin: 10px;
 }
+
+/*.menu {
+    display: none;
+}*/
 
 /* Inscribite */
 
@@ -496,7 +504,7 @@ h2 {
 }
 
 .registro {
-    color: black;
+    color: rgb(0, 0, 0);
     font-size: 25px;
     width: 280px;
     height: 150px;
@@ -547,8 +555,6 @@ h2 {
     padding: 10px;
 }
 
-
-
 label {
     width: 200px;
     font-weight: bold;
@@ -562,14 +568,14 @@ input {
 }
 
 textarea {
-    background-color: #FEF9E7;
+    background-color: rgb(254, 249, 231);
 }
 
 .button {
     width: 100px;
     height: 50px;
     background-color: rgb(125, 60, 152);
-    color: #fff;
+    color: rgb(255, 255, 255);
     font-weight: bold;
     font-size: 18px;
     border-radius: 5px;
@@ -588,6 +594,7 @@ textarea {
    border-width: medium;
    border-color:  rgb(254, 176, 176);
 }
+
 legend {
     border-color: #000;
     font-size: xx-large;
@@ -595,13 +602,15 @@ legend {
     text-align: center;
     font-weight: bold;
 }
+
 .dato_u,.dato2{
     text-align: left;
     color:#000;
     font-weight: bold;
- }
+}
 
-.alumnos_adiest{
+#alumnos_adiest{
+    display: flex;
     flex-direction: column;
     gap: 12px;
     width: 600px;
@@ -609,6 +618,10 @@ legend {
     padding: 15px;
     text-align: center;
 } 
+
+.dato_u input {
+    height: 20px;
+}
 
 input#genero_u {
     width: 10px;
@@ -620,15 +633,15 @@ input#genero_a {
 
 input#ciudad_a {
     width: 10px;
-    
 }
+
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
     padding: 40px;
     gap: 10px;
+}
 
-  }
 .grid-item {
     color: rgb(38, 0, 255);
     font-weight: bold;
@@ -660,7 +673,7 @@ input#ciudad_a {
     /*display:grid;*/
     display: flex;
     column-gap: 20px;
-    grid-template-columns: 300px 300px ;
+    grid-template-columns: 300px 300px;
     /*
     width: 1280px;
     margin-bottom: 150px;
@@ -682,6 +695,7 @@ input#ciudad_a {
     height: 300px;
     margin: 0 auto;
 }*/
+
 .grid-item2 .biselado{
     display: flex;
     flex-direction: column;
@@ -710,6 +724,11 @@ input#usuario_login, input#contraseña_login {
     /*text-align: center;*/
     margin-top: 25px;
     width: auto;
+}
+
+.error {
+    color: rgb(255, 0, 0);
+    font-weight: bold;
 }
 
 /*----------------------------------*/
@@ -745,7 +764,7 @@ input#usuario_login, input#contraseña_login {
         padding: 5px;
     }
     
-    nav ul a {
+    .nav ul a {
         margin: 0;
     }
     
@@ -784,7 +803,6 @@ input#usuario_login, input#contraseña_login {
     
     .datos {
         margin-left: 20px;
-        
     }
 
     .links {
@@ -819,7 +837,8 @@ input#usuario_login, input#contraseña_login {
     .orden .barrios {
         width: 90%;
     }
-/*Log-in*/
+
+    /*Log-in*/
 
     .grid-container2 {
         width: auto;
@@ -830,15 +849,8 @@ input#usuario_login, input#contraseña_login {
     .dato_login{
         display: flex;
     }
-
 }
     
-
-
-
-
-
-
 
 
 
@@ -847,11 +859,12 @@ input#usuario_login, input#contraseña_login {
 @media screen and (max-width: 640px) {
     /*Index*/
     header {
-        height: 250px;
+        height: 200px;
     }
     
     .contenedor {
-        height: 150px;
+        height: 200px;
+        flex-direction: column;
     }
     
     .contenedor .responsive {
@@ -860,24 +873,83 @@ input#usuario_login, input#contraseña_login {
         gap: 5px;
     }
 
+    .abrir-menu, .cerrar-menu {
+        display: block;
+        border: 0;
+        cursor: pointer;
+        background-color: rgb(254, 176, 176);
+    }
+
+    .abrir-menu {
+        position: fixed;
+        bottom: 3%;
+        right: 3%;
+        border-radius: 50%;
+        padding: 10px;
+        width: 50px;
+        height: 50px;
+        box-shadow: 2px 2px 10px rgba(0,0,0,.1);
+        transition: 0.5s;
+    }
+
+    .cerrar-menu {
+        width: 20px;
+        margin-right: 20px;
+    }
+
+    .nav {
+        opacity: 0;
+        visibility: hidden;
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+        gap: 10px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 40%;
+        height: 100%;
+        padding: 20px;
+        box-sizing: border-box;
+        background-color: rgb(254, 176, 176);
+        padding: 20px;
+        bottom: 0;
+        box-shadow: 2px 2px 10px rgba(0,0,0,.1);
+    }
+
+    .nav.visible {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .nav ul {
+        flex-direction: column;
+        align-items: end;
+    }
+
+    .nav ul li {
+        margin-top: 20px;
+    }
+
+    .nav ul li a {
+        margin: 0;
+        font-size: 16px;
+    }
+
     .logo-style {
         height: 60px;
     }
 
     h1 {
-        font-size: 22px;
+        font-size: 26px;
     }
         
     #inicio {
-        height: 18px;
+        height: 25px;
         float: right;
         margin-top: 0;
     }
   
-    nav ul a {
-        align-items: start;
-    }
-
     main { 
         width: 100%;
         margin: auto;
@@ -922,7 +994,6 @@ input#usuario_login, input#contraseña_login {
     
     .datos {
         margin-left: 20px;
-    
     }
 
     .links {
@@ -982,36 +1053,40 @@ input#usuario_login, input#contraseña_login {
         height: 100px;
     }
 
-/*Form Alumno*/
+    /*Form Alumno*/
 
-.alumnos_adiest{
-    width: auto;
-}
+    #alumnos_adiest{
+        width: auto;
+    }
 
-/*Form Adiestradores*/
+    /*Form Adiestradores*/
 
-.grid-container {
-    display: grid;
-    grid-template-columns: auto auto;
-    padding: 40px;
-    gap: 10px;
-}
-/*Contacto*/
-#contact{
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    width: auto;
-    margin: auto;
-    padding: 15px;
-    text-align: center;
-        }
-.linea,.dato_u,.dato2{
-    flex-direction: column;
-}
-/*Log-in*/
-.grid-container2 {
-    flex-direction: column;
-}
+    .grid-container {
+        display: grid;
+        grid-template-columns: auto auto;
+        padding: 40px;
+        gap: 10px;
+    }
 
+    /*Contacto*/
+
+    #contact{
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+        width: auto;
+        margin: auto;
+        padding: 15px;
+        text-align: center;
+    }
+
+    .linea,.dato_u,.dato2 {
+        flex-direction: column;
+    }
+
+    /*Log-in*/
+
+    .grid-container2 {
+        flex-direction: column;
+    }
 }
