--- a/css/style.css
+++ b/css/style.css
@@ -276,10 +276,6 @@ footer {
     margin: 10px;
 }
 
-/*.menu {
-    display: none;
-}*/
-
 /* Inscribite */
 
 .video {
@@ -551,7 +547,7 @@ h2 {
 }
 
 .linea {
-   display: flex;
+    display: flex;
     padding: 10px;
 }
 
@@ -569,6 +565,7 @@ input {
 
 textarea {
     background-color: rgb(254, 249, 231);
+    width: 300px;
 }
 
 .button {
@@ -726,9 +723,27 @@ input#usuario_login, input#contraseña_login {
     width: auto;
 }
 
-.error {
+#mensajeError {
+    display: none;
     color: rgb(255, 0, 0);
     font-weight: bold;
+    text-align: center;
+    border: 3px solid rgb(255, 0, 0);
+    width: 350px;
+    margin: auto;
+    background-color: rgb(255, 197, 197);
+    padding: 10px;
+}
+
+#mensajeExito {
+    display: none;
+    color: rgb(4, 192, 4);
+    font-weight: bold;
+    border: 3px solid rgb(4, 192, 4);
+    width: 350px;
+    margin: auto;
+    background-color: rgb(203, 251, 203);
+    padding: 10px;
 }
 
 /*----------------------------------*/
@@ -877,7 +892,7 @@ input#usuario_login, input#contraseña_login {
         display: block;
         border: 0;
         cursor: pointer;
-        background-color: rgb(254, 176, 176);
+        background-color: rgb(125, 60, 152);
     }
 
     .abrir-menu {
@@ -893,8 +908,18 @@ input#usuario_login, input#contraseña_login {
     }
 
     .cerrar-menu {
-        width: 20px;
+        background-color: rgb(254, 176, 176);
         margin-right: 20px;
+    }
+
+    .abrir-menu:hover {
+        background-color: rgb(254, 176, 176);
+        cursor: pointer;
+    }
+
+    .cerrar-menu:hover {
+        background-color: rgb(125, 60, 152); 
+        border-radius: 50%;  
     }
 
     .nav {
@@ -902,29 +927,34 @@ input#usuario_login, input#contraseña_login {
         visibility: hidden;
         display: flex;
         flex-direction: column;
-        align-items: end;
+        justify-content: left;
+        align-items: start;
         gap: 10px;
-        position: absolute;
+        position: fixed;
         top: 0;
-        right: 0;
+        left: 0;
         width: 40%;
         height: 100%;
         padding: 20px;
         box-sizing: border-box;
         background-color: rgb(254, 176, 176);
         padding: 20px;
-        bottom: 0;
         box-shadow: 2px 2px 10px rgba(0,0,0,.1);
     }
 
     .nav.visible {
         opacity: 1;
         visibility: visible;
+        height: 100%;
     }
 
+    .nav img {
+        width: 20px;
+        padding: 10px;
+    }
     .nav ul {
         flex-direction: column;
-        align-items: end;
+        align-items: start;
     }
 
     .nav ul li {
