--- a/css/style.css
+++ b/css/style.css
@@ -988,6 +988,7 @@ input#usuario_login, input#contraseña_login {
         background-color: rgb(254, 176, 176);
         padding: 20px;
         box-shadow: 2px 2px 10px rgba(0,0,0,.1);
+        z-index: 1;
     }
 
     .nav.visible {
@@ -1105,6 +1106,7 @@ input#usuario_login, input#contraseña_login {
 
     .box {
         width: 95%;
+        z-index: 0;
     }
 
     .grupo .boton {
@@ -1120,6 +1122,7 @@ input#usuario_login, input#contraseña_login {
         width: 90%;
         height: auto;
         margin-bottom: 15px;
+        z-index: 0;
     }
 
     .swiper .swiper-slide {
